# rest-db-api

./: .coveragerc  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
examples/: sample-weather-response.json  testDialect.py  testDialectNew.py
restDbApi/: db_engine_specs.py  fetch_flat_data.py  my_weather_adapter.py  rest_api_adapter.py  rest_api_dialect.py  rest_api_engine_spec.py  utils.py
rest_db_api/: rest_api_adapter.py
test/: generic_json_cache.sqlite  rest_api_cache.sqlite  testCorrectAdapter.py  testDialect.py  testRestDbApi.py
tests/: conftest.py  test_rest_dbapi.py  tests.py
